# serde-content

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: point.rs
src/: error.rs  lib.rs  number.rs  tests.rs
src/de/: enum.rs  error.rs  identifier.rs  map.rs  mod.rs  number.rs  seq.rs  struct.rs  tests.rs
src/ser/: enum.rs  map.rs  mod.rs  number.rs  seq.rs  struct.rs  tests.rs  tuple.rs
tests/: attributes.rs  errors.rs  newtype.rs  numbers.rs  roundtrip.rs
